# axum_metrics

./: Cargo.toml  README.md
scripts/: test_load.sh
src/: lib.rs  main.rs
