[package]
name = "observability_lib"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "util"] }
http-body = "1.0"
http-body-util = "0.1"
pin-project-lite = "0.2"

# Observability (Metrics 0.24 Stack)
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

# Utils
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-middleware = "0.3"
reqwest-tracing = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.48.0"
futures = "0.3.31"
rand = "0.9.2"
async-trait = "0.1.89"

async-openai = {git = "https://github.com/lucky9-cyou/async-openai.git", branch = "fix/fix-groq", features = ["byot"]}
dotenv = "0.15.0"
log4rs = "1.4.0"
